deploy/preprod/ingress/ingress-live-1.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: allocation-manager
  namespace: offender-management-preprod
  annotations:
    kubernetes.io/ingress.class: "nginx"
    external-dns.alpha.kubernetes.io/set-identifier: allocation-manager-offender-management-preprod-blue
    external-dns.alpha.kubernetes.io/aws-weight: "0"
    nginx.ingress.kubernetes.io/whitelist-source-range: >
      35.178.209.113/32,
      3.8.51.207/32,
      35.177.252.54/32,
      195.92.38.20,
      195.92.38.21,
      195.92.38.22,
      195.92.38.16/28,
      194.33.192.0/24,
      194.33.196.0/24,
      194.33.193.0/25,
      194.33.197.0/25,
      51.247.4.0/24,
      51.247.3.0/24,
      81.134.202.29/32,
      62.25.109.197/32,
      212.137.36.230/32,
      81.134.202.29,
      172.22.16.3,
      54.229.117.192,
      87.81.252.58,
      217.41.68.40,
      52.209.34.226,
      52.209.186.226,
      52.210.232.124,
      52.59.46.112,
      52.59.147.246,
      52.48.244.35,
      52.57.132.90,
      217.33.148.210/32,
      35.177.252.195/32,
      52.56.112.98/32,
      52.56.118.154/32,
      35.177.125.252/32,
      35.177.137.160/32,
      88.98.48.10/32,
      51.148.9.201/32,
      217.22.14.151/32,
      195.59.75.0/24,
      194.33.192.0/25,
      194.33.193.0/25,
      194.33.196.0/25,
      194.33.197.0/25,
      194.176.200.113/32,
      51.155.85.249/32,
      51.148.47.137/32,
      51.155.55.241/32,
      217.161.76.184/29,
      217.161.76.192/29,
      217.22.14.0/24,
      51.149.251.0/24,
      51.149.250.0/24,
      51.149.249.0/29,
      194.33.248.0/29,
      194.33.249.0/29,
      51.149.249.32/29,
      51.149.250.0/24,
      51.149.249.0/29,
      194.33.249.0/29,
      51.149.249.32/29,
      194.33.248.0/29,
      20.49.214.199,
      20.49.214.228
spec:
  tls:
  - hosts:
    - allocation-manager-preprod.apps.live-1.cloud-platform.service.justice.gov.uk
  - hosts:
    - preprod.moic.service.justice.gov.uk
    secretName: allocation-manager-hostname
  rules:
  - host: allocation-manager-preprod.apps.live-1.cloud-platform.service.justice.gov.uk
    http:
      paths:
      - path: /
        backend:
          serviceName: allocation-manager
          servicePort: 3000
  - host: preprod.moic.service.justice.gov.uk
    http:
      paths:
        - path: /
          backend:
            serviceName: allocation-manager
            servicePort: 3000
